python/tests/unit/testdata/listeners/prefix_wildcard_and_hostname_with_port_out.yaml
listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
        protocol: TCP
    filter_chains:
      - filter_chain_match: {}
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              access_log:
                - name: envoy.access_loggers.file
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    log_format:
                      text_format_source:
                        inline_string: |
                          ACCESS [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"

                    path: "/dev/fd/1"
              http_filters:
                - name: envoy.filters.http.cors
                - name: envoy.filters.http.router
              http_protocol_options:
                accept_http_10: false
              normalize_path: true
              preserve_external_request_id: false
              route_config:
                virtual_hosts:
                  - domains:
                      - "*.local"
                    name: listener-8080-*.local
                    routes:
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/check_ready
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/check_ready"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/check_ready
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/check_alive
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/check_alive"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/check_alive
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - name: ":authority"
                              suffix_match: ".local"
                            - exact_match: "https"
                              name: x-forwarded-proto
                          prefix: "/backend2/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote2_default
                        route:
                          cluster: cluster_quote2_default
                          prefix_rewrite: "/"
                          priority:
                          timeout: 3.000s
                      - match:
                          case_sensitive: true
                          headers:
                            - name: ":authority"
                              suffix_match: ".local"
                          prefix: "/backend2/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote2_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: "quote.local"
                              name: ":authority"
                            - exact_match: "https"
                              name: x-forwarded-proto
                          prefix: "/backend/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote_default
                        route:
                          cluster: cluster_quote_default
                          prefix_rewrite: "/"
                          priority:
                          timeout: 3.000s
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: "quote.local"
                              name: ":authority"
                          prefix: "/backend/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote_default
                        redirect:
                          https_redirect: true
                  - domains:
                      - "*.local:8500"
                    name: listener-8080-*.local:8500
                    routes:
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/check_ready
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/check_ready"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/check_ready
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/check_alive
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/check_alive"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/check_alive
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: "quote.local:8500"
                              name: ":authority"
                            - exact_match: "https"
                              name: x-forwarded-proto
                          prefix: "/backend3/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote3_default
                        route:
                          cluster: cluster_quote3_default
                          prefix_rewrite: "/"
                          priority:
                          timeout: 3.000s
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: "quote.local:8500"
                              name: ":authority"
                          prefix: "/backend3/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote3_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - name: ":authority"
                              suffix_match: ".local:8500"
                            - exact_match: "https"
                              name: x-forwarded-proto
                          prefix: "/backend4/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote4_default
                        route:
                          cluster: cluster_quote4_default
                          prefix_rewrite: "/"
                          priority:
                          timeout: 3.000s
                      - match:
                          case_sensitive: true
                          headers:
                            - name: ":authority"
                              suffix_match: ".local:8500"
                          prefix: "/backend4/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote4_default
                        redirect:
                          https_redirect: true
              server_name: envoy
              stat_prefix: ingress_http
              use_remote_address: true
        name: httphost-shared
    name: listener-8080
    traffic_direction: UNSPECIFIED
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8443
        protocol: TCP
    filter_chains:
      - filter_chain_match:
          server_names: ["*.local"]
          transport_protocol: tls
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              access_log:
                - name: envoy.access_loggers.file
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    log_format:
                      text_format_source:
                        inline_string: |
                          ACCESS [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"

                    path: "/dev/fd/1"
              http_filters:
                - name: envoy.filters.http.cors
                - name: envoy.filters.http.router
              http_protocol_options:
                accept_http_10: false
              normalize_path: true
              preserve_external_request_id: false
              route_config:
                virtual_hosts:
                  - domains:
                      - "*.local"
                    name: listener-8443-*.local
                    routes:
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/check_ready
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/check_ready"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/check_ready
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/check_alive
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/check_alive"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/check_alive
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - name: ":authority"
                              suffix_match: ".local"
                            - exact_match: "https"
                              name: x-forwarded-proto
                          prefix: "/backend2/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote2_default
                        route:
                          cluster: cluster_quote2_default
                          prefix_rewrite: "/"
                          priority:
                          timeout: 3.000s
                      - match:
                          case_sensitive: true
                          headers:
                            - name: ":authority"
                              suffix_match: ".local"
                          prefix: "/backend2/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote2_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: "quote.local"
                              name: ":authority"
                            - exact_match: "https"
                              name: x-forwarded-proto
                          prefix: "/backend/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote_default
                        route:
                          cluster: cluster_quote_default
                          prefix_rewrite: "/"
                          priority:
                          timeout: 3.000s
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: "quote.local"
                              name: ":authority"
                          prefix: "/backend/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote_default
                        redirect:
                          https_redirect: true
                  - domains:
                      - "*.local:8500"
                    name: listener-8443-*.local:8500
                    routes:
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/check_ready
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/check_ready"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/check_ready
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/check_alive
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/check_alive"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/check_alive
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: "quote.local:8500"
                              name: ":authority"
                            - exact_match: "https"
                              name: x-forwarded-proto
                          prefix: "/backend3/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote3_default
                        route:
                          cluster: cluster_quote3_default
                          prefix_rewrite: "/"
                          priority:
                          timeout: 3.000s
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: "quote.local:8500"
                              name: ":authority"
                          prefix: "/backend3/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote3_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - name: ":authority"
                              suffix_match: ".local:8500"
                            - exact_match: "https"
                              name: x-forwarded-proto
                          prefix: "/backend4/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote4_default
                        route:
                          cluster: cluster_quote4_default
                          prefix_rewrite: "/"
                          priority:
                          timeout: 3.000s
                      - match:
                          case_sensitive: true
                          headers:
                            - name: ":authority"
                              suffix_match: ".local:8500"
                          prefix: "/backend4/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote4_default
                        redirect:
                          https_redirect: true
              server_name: envoy
              stat_prefix: ingress_https
              use_remote_address: true
        name: httpshost-minimal-host
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: test.crt
                  private_key:
                    filename: test.key
      - filter_chain_match: {}
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              access_log:
                - name: envoy.access_loggers.file
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    log_format:
                      text_format_source:
                        inline_string: |
                          ACCESS [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"

                    path: "/dev/fd/1"
              http_filters:
                - name: envoy.filters.http.cors
                - name: envoy.filters.http.router
              http_protocol_options:
                accept_http_10: false
              normalize_path: true
              preserve_external_request_id: false
              route_config:
                virtual_hosts:
                  - domains:
                      - "*.local"
                    name: listener-8443-*.local
                    routes:
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/check_ready
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/check_ready"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/check_ready
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/check_alive
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/check_alive"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/check_alive
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - name: ":authority"
                              suffix_match: ".local"
                            - exact_match: "https"
                              name: x-forwarded-proto
                          prefix: "/backend2/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote2_default
                        route:
                          cluster: cluster_quote2_default
                          prefix_rewrite: "/"
                          priority:
                          timeout: 3.000s
                      - match:
                          case_sensitive: true
                          headers:
                            - name: ":authority"
                              suffix_match: ".local"
                          prefix: "/backend2/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote2_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: "quote.local"
                              name: ":authority"
                            - exact_match: "https"
                              name: x-forwarded-proto
                          prefix: "/backend/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote_default
                        route:
                          cluster: cluster_quote_default
                          prefix_rewrite: "/"
                          priority:
                          timeout: 3.000s
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: "quote.local"
                              name: ":authority"
                          prefix: "/backend/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote_default
                        redirect:
                          https_redirect: true
                  - domains:
                      - "*.local:8500"
                    name: listener-8443-*.local:8500
                    routes:
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/check_ready
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/check_ready"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/check_ready
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/check_alive
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/check_alive"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/check_alive
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: https
                              name: x-forwarded-proto
                          prefix: /ambassador/v0/
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        route:
                          cluster: cluster_127_0_0_1_8877_default
                          prefix_rewrite: "/ambassador/v0/"
                          priority:
                          timeout: "10.000s"
                      - match:
                          case_sensitive: true
                          prefix: /ambassador/v0/
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_127_0_0_1_8877_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: "quote.local:8500"
                              name: ":authority"
                            - exact_match: "https"
                              name: x-forwarded-proto
                          prefix: "/backend3/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote3_default
                        route:
                          cluster: cluster_quote3_default
                          prefix_rewrite: "/"
                          priority:
                          timeout: 3.000s
                      - match:
                          case_sensitive: true
                          headers:
                            - exact_match: "quote.local:8500"
                              name: ":authority"
                          prefix: "/backend3/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote3_default
                        redirect:
                          https_redirect: true
                      - match:
                          case_sensitive: true
                          headers:
                            - name: ":authority"
                              suffix_match: ".local:8500"
                            - exact_match: "https"
                              name: x-forwarded-proto
                          prefix: "/backend4/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote4_default
                        route:
                          cluster: cluster_quote4_default
                          prefix_rewrite: "/"
                          priority:
                          timeout: 3.000s
                      - match:
                          case_sensitive: true
                          headers:
                            - name: ":authority"
                              suffix_match: ".local:8500"
                          prefix: "/backend4/"
                          runtime_fraction:
                            default_value:
                              denominator: "HUNDRED"
                              numerator: 100
                            runtime_key: routing.traffic_shift.cluster_quote4_default
                        redirect:
                          https_redirect: true
              server_name: envoy
              stat_prefix: ingress_https
              use_remote_address: true
        name: httphost-shared
    listener_filters:
      - name: envoy.filters.listener.tls_inspector
    name: listener-8443
    traffic_direction: UNSPECIFIED
  - address:
      socket_address:
        address: '127.0.0.1'
        port_value: 8006
        protocol: TCP
    filter_chains:
      - filter_chain_match: {}
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              http_filters:
                - name: envoy.filters.http.health_check
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                    headers:
                      - exact_match: /ready
                        name: ":path"
                    pass_through_mode: False
                - name: envoy.filters.http.router
              route_config: 
                name: local_route
              stat_prefix: ready_http
    name: ambassador-listener-ready-127.0.0.1-8006
